根据sonarLint提示修复一些潜在问题